Fixed CSS mistake: Changed .section-about-us [class*='col-']'s align-self value from 'center' to center

--- a/0x04-flexbox/9-styles.css
+++ b/0x04-flexbox/9-styles.css
@@ -382,7 +382,7 @@
       ============================= */
 
     .section-about-us [class*='col-'] {
-      align-self: "center";
+      align-self: center;
     }
 
   /*** 4. CARD ***/
